--- a/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
+++ b/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1de5443f",
+   "id": "8ecc4f8b",
    "metadata": {},
    "source": [
     "---\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75de46a2",
+   "id": "ee05fd5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4021da57",
+   "id": "4ce501be",
    "metadata": {},
    "source": [
     "Preview variable details."
@@ -76,13 +76,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c052aba",
+   "id": "38530845",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Print relevant details \n",
-    "role_name = role.split(\"/\")[-1]  # Extracts the last role (the actual name)\n",
-    "print(f\"Execution Role: {role_name}\")  # Displays the IAM role being used\n",
+    "print(f\"Execution Role: {role}\")  # Displays the IAM role being used\n",
     "bucket_names = [bucket[\"Name\"] for bucket in s3.list_buckets()[\"Buckets\"]]\n",
     "print(f\"Available S3 Buckets: {bucket_names}\")  # Shows the default S3 bucket assigned to SageMaker\n",
     "print(f\"AWS Region: {session.boto_region_name}\")  # Prints the region where the SageMaker session is running"
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba3435f2",
+   "id": "2efd5d80",
    "metadata": {},
    "source": [
     "## Reading data from S3\n",
@@ -118,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01946dab",
+   "id": "322cd1af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f09af7",
+   "id": "267cebca",
    "metadata": {},
    "source": [
     "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
@@ -174,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0881f50",
+   "id": "2e80ce7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24bfd208",
+   "id": "a61d4ca7",
    "metadata": {},
    "source": [
     "/home/ec2-user/SageMaker/"
@@ -192,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aae61788",
+   "id": "6c7bab08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d709dc5",
+   "id": "9da54499",
    "metadata": {},
    "source": [
     "**Note**: You may need to hit refresh on the file explorer panel to the left to see this file. If you get any permission issues...\n",
@@ -230,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c60d5894",
+   "id": "5b5cfd46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13857179",
+   "id": "491aff85",
    "metadata": {},
    "source": [
     "Total size of bucket 'doejohn-titanic-s3': 0.06 MB\n",
@@ -280,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1bf4518",
+   "id": "685d974e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "792e618d",
+   "id": "93397d33",
    "metadata": {},
    "source": [
     "/home/ec2-user/SageMaker\n",
@@ -300,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "467b410c",
+   "id": "a7a0de27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8864324e",
+   "id": "469d78a5",
    "metadata": {},
    "source": [
     "Our AWS_helpers.py file can be found in `AWS_helpers/helpers.py`. With this file downloaded, you can call this function via..."
@@ -318,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c86c1290",
+   "id": "7fca6801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf41848",
+   "id": "68b5479f",
    "metadata": {},
    "source": [
     "{'size_mb': 0.060057640075683594, 'size_gb': 5.865003913640976e-05}\n",
@@ -342,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89aa7e58",
+   "id": "14e35d3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cabd398",
+   "id": "f4e1af79",
    "metadata": {},
    "source": [
     "Estimated monthly storage cost: $0.0000\n",
@@ -384,7 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69c10267",
+   "id": "07f2930d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91a0c04b",
+   "id": "37af8d09",
    "metadata": {},
    "source": [
     "**Important Considerations**:\n",
@@ -413,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9e42e1f",
+   "id": "66781bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d29b420",
+   "id": "0ad8cb14",
    "metadata": {},
    "source": [
     "Files uploaded successfully.\n",
@@ -439,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d9b98a",
+   "id": "f70abea5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be442aa3",
+   "id": "3688c449",
    "metadata": {},
    "source": [
     "Alternatively, we can substitute this for a helper function call as well."
@@ -465,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dafc42e",
+   "id": "b75d3a47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1c279c4",
+   "id": "c01ef6fd",
    "metadata": {},
    "source": [
     "['results/results.txt', 'titanic_test.csv', 'titanic_train.csv']\n",
