--- a/notebooks/Interacting-with-code-repo.ipynb
+++ b/notebooks/Interacting-with-code-repo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "32de9035",
+   "id": "b6e5cc4a",
    "metadata": {},
    "source": [
     "---\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bce26b05",
+   "id": "ad177655",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9621a8f",
+   "id": "8eb46200",
    "metadata": {},
    "source": [
     "/home/ec2-user/SageMaker\n",
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e867d1ab",
+   "id": "f06efbc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aefff9f4",
+   "id": "516dbf17",
    "metadata": {},
    "source": [
     "**Note**: After running, you may want to comment out the above code so that you don't have to enter in your login every time you run your whole notebook\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d36a4096",
+   "id": "691e315c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b567fb70",
+   "id": "f66495cb",
    "metadata": {},
    "source": [
     "## Step 3: Convert json .ipynb files to .py\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e4a6e49",
+   "id": "28c20444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f5a2c56",
+   "id": "3c7e006d",
    "metadata": {},
    "source": [
     "2. Then, run the following command in a notebook cell to convert both of our notebooks to `.py` files"
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "451e1ae9",
+   "id": "e4b08a3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4da94dfe",
+   "id": "25db00e5",
    "metadata": {},
    "source": [
     "[jupytext] Reading Interacting-with-S3.ipynb in format ipynb\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f9371c7",
+   "id": "a5d8e5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "275e4def",
+   "id": "5614f0ef",
    "metadata": {},
    "source": [
     "For convenience, we have placed this code inside a `convert_files()` function in `helpers.py`."
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d54899",
+   "id": "2cd7c7c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46bac700",
+   "id": "ed0e083a",
    "metadata": {},
    "source": [
     "**Once converted, move our new .py file to the AWS_helpers folder using the file explorer panel in Jupyter Lab.**\n",
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcb9e1c8",
+   "id": "8b440cda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a386490e",
+   "id": "bdd7872c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be506309",
+   "id": "d68dd02a",
    "metadata": {},
    "source": [
     "2. Add and commit changes"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba5f4894",
+   "id": "c8741cf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20cd9e7f",
+   "id": "0a4e6403",
    "metadata": {},
    "source": [
     "3. Check status"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba171bc2",
+   "id": "8d1aea8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "980d0c5f",
+   "id": "99809491",
    "metadata": {},
    "source": [
     "## Step 5. Adding .ipynb to gitigore\n",
@@ -295,22 +295,23 @@
     "\n",
     "Here's how to add `.ipynb` files to `.gitignore` to ignore them project-wide:\n",
     "\n",
-    "1. **Cd to git repo folder**: First make sure we're in the repo folder"
+    "1. **Check working directory**: First make sure we're in the repo folder"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3e2c06f",
+   "id": "6afcfd99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd AWS_helpers"
+    "!pwd\n",
+    "#%cd AWS_helpers"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a96f58c",
+   "id": "8c77c1a4",
    "metadata": {},
    "source": [
     "2. **Create the `.gitignore` file**: This file will be hidden in Jupyter (since it starts with \".\"), but you can verify it exists using `ls`."
@@ -319,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b611baf6",
+   "id": "0f50a66f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd1633c2",
+   "id": "d10ca192",
    "metadata": {},
    "source": [
     "3. **Add `.ipynb` files to `.gitignore`**: You can add this line using a command within your notebook:"
@@ -338,17 +339,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8941785f",
+   "id": "8391a6c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\".gitignore\", \"a\") as gitignore:\n",
-    "gitignore.write(\"\\n# Ignore all Jupyter Notebook files\\n*.ipynb\\n\")"
+    "\tgitignore.write(\"\\n# Ignore all Jupyter Notebook files\\n*.ipynb\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "48faa517",
+   "id": "8df76b8c",
    "metadata": {},
    "source": [
     "View file contents"
@@ -357,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcb8722a",
+   "id": "0339482e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c743e47",
+   "id": "3ba40d1b",
    "metadata": {},
    "source": [
     "4. **Ignore other common temp files**\n",
@@ -376,17 +377,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04282fba",
+   "id": "dfb4bb2d",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\".gitignore\", \"a\") as gitignore:\n",
-    "gitignore.write(\"\\n# Ignore cache and temp files\\n__pycache__/\\n*.tmp\\n*.log\\n\")"
+    "\tgitignore.write(\"\\n# Ignore cache and temp files\\n__pycache__/\\n*.tmp\\n*.log\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f1be200d",
+   "id": "e1821948",
    "metadata": {},
    "source": [
     "View file contents"
@@ -395,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "447cd9c7",
+   "id": "d2125d0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b843040",
+   "id": "aebebac2",
    "metadata": {},
    "source": [
     "5. **Add and commit the `.gitignore` file**:\n",
@@ -415,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15bf5771",
+   "id": "1409b88a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2ee40f6",
+   "id": "a288cf8b",
    "metadata": {},
    "source": [
     "This setup will:\n",
@@ -434,7 +435,7 @@
     "- Keep your repository cleaner, containing only `.py` scripts for easier version control and reduced repository size. \n",
     "\n",
     "## Step 6. Merging local changes with remote/GitHub\n",
-    "Our local changes have now been committed, and we can begin the process of mergining with the remoate main branch. Before we try to push our changes, it's good practice to first to a pull. This is critical when working on a collaborate repo with multiple users, so that you don't miss any updates from other team members.\n",
+    "Our local changes have now been committed, and we can begin the process of mergining with the remote main branch. Before we try to push our changes, it's good practice to first to a pull. This is critical when working on a collaborate repo with multiple users, so that you don't miss any updates from other team members.\n",
     "\n",
     "\n",
     "### 1. Pull the latest changes from the main branch\n",
@@ -456,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "720718ff",
+   "id": "b3181507",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,20 +467,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de983afd",
+   "id": "cc3a31fb",
    "metadata": {},
    "source": [
-    "From https://github.com/qualiaMachine/AWS_helpers\n",
-    "     * branch            main       -> FETCH_HEAD\n",
-    "    Already up to date.\n",
-    "\n",
     "If you get merge conflicts, be sure to resolve those before moving forward (e.g., use git checkout -> add -> commit). You can skip the below code if you don't have any conflicts."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41e879c0",
+   "id": "46b4b504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d16132e1",
+   "id": "c9afdb38",
    "metadata": {},
    "source": [
     "### 2. Push changes using PAT creditials"
@@ -507,30 +504,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "972ac7c9",
+   "id": "c093aaf4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Push with embedded credentials from getpass (avoids interactive prompt)\n",
-    "github_url = 'github.com/username/AWS_helpers.git' # replace username with your own. THe full address for your fork can be found under Code -> Clone -> HTTPS (remote the https:// before the rest of the address)\n",
+    "github_url = f'github.com/{username}/AWS_helpers.git' # The full address for your fork can be found under Code -> Clone -> HTTPS (remote the https:// before the rest of the address)\n",
     "!git push https://{username}:{token}@{github_url} main"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2a38b7b7",
+   "id": "73b4b41e",
    "metadata": {},
    "source": [
-    "Enumerating objects: 6, done.\n",
-    "\tCounting objects: 100% (6/6), done.\n",
-    "\tDelta compression using up to 2 threads\n",
-    "\tCompressing objects: 100% (5/5), done.\n",
-    "\tWriting objects: 100% (5/5), 3.00 KiB | 3.00 MiB/s, done.\n",
-    "\tTotal 5 (delta 0), reused 0 (delta 0), pack-reused 0\n",
-    "\tTo https://github.com/qualiaMachine/AWS_helpers.git\n",
-    "\t   bc47546..6a8bb8b  main -> main\n",
-    "   \n",
-    "After pushing, you should navigate back to your fork on GitHub to verify everything worked (e.g., https://github.com/username/AWS_helpers/tree/main)\n",
+    "After pushing, you can navigate back to your fork on GitHub to verify everything worked (e.g., https://github.com/username/AWS_helpers/tree/main)\n",
     "\n",
     "## Step 7: Pulling .py files and converting back to notebook format\n",
     "\n",
@@ -542,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9407e62c",
+   "id": "fb88db3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "003ae717",
+   "id": "dea1c6ad",
    "metadata": {},
    "source": [
     "2. We can then use jupytext again to convert in the other direction (.py to .ipynb).\n",
@@ -562,17 +550,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a5bb8b9",
+   "id": "1e882719",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace 'your_script.py' with your actual filename\n",
     "!jupytext --to notebook Interacting-with-S3.py --output Interacting-with-S3.ipynb"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f15feea5",
+   "id": "9280eb57",
    "metadata": {},
    "source": [
     "### Applying to all .py files\n",
@@ -582,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecbdc5b2",
+   "id": "e4631594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbcb3dfb",
+   "id": "8e58363f",
    "metadata": {},
    "source": [
     ":::::::::::::::::::::::::::::::::::::: keypoints \n",
