--- a/notebooks/Training-models-in-SageMaker-notebooks-part2.ipynb
+++ b/notebooks/Training-models-in-SageMaker-notebooks-part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "67e0698a",
+   "id": "6bb72e99",
    "metadata": {},
    "source": [
     "---\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1028e2df",
+   "id": "389e9c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
     "s3 = boto3.client('s3')\n",
     "\n",
     "# Define the S3 bucket that we will load from\n",
-    "bucket_name = 'myawesometeam-titanic'  # replace with your S3 bucket name\n",
+    "bucket_name = 'doejohn-titanic-s3'  # replace with your S3 bucket name\n",
     "\n",
     "# Define train/test filenames\n",
     "train_filename = 'titanic_train.csv'\n",
@@ -64,21 +64,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4472cfd3",
+   "id": "e66e714b",
    "metadata": {},
    "source": [
-    "We should also record our local instance information to report this information during testing."
+    "We should also record our local instance information to report this information during testing. First, let's make sure we're starting in the same location to access helper functions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fefe8752",
+   "id": "e7534ba9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /home/ec2-user/SageMaker/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e794a103",
    "metadata": {},
    "outputs": [],
    "source": [
     "import AWS_helpers.helpers as helpers\n",
-    "notebook_instance_name = 'MyAwesomeTeam-ChrisEndemann-Titanic-Train-Tune-Xgboost-NN'\n",
+    "notebook_instance_name = 'DoeJohn-ExploreSageMaker'\n",
     "local_instance_info = helpers.get_notebook_instance_info(notebook_instance_name)\n",
     "local_instance = local_instance_info['InstanceType']\n",
     "local_instance"
@@ -86,18 +96,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c845ba5",
+   "id": "b2494d6c",
    "metadata": {},
    "source": [
     "`\n",
     "\n",
-    "    'ml.t3.medium'\n",
-    "\n",
-    "  \n",
-    "\n",
     "## Training a neural network with SageMaker\n",
     "Let's see how to do a similar experiment, but this time using PyTorch neural networks. We will again demonstrate how to test our custom model train script (train_nn.py) before deploying to SageMaker, and discuss some strategies (e.g., using a GPU) for improving train time when needed.\n",
-    "\n",
     "\n",
     "### Preparing the data (compressed npz files)\n",
     "When deploying a PyTorch model on SageMaker, it's helpful to prepare the input data in a format that's directly accessible and compatible with PyTorch's data handling methods. The next code cell will prep our npz files from the existing csv versions. \n",
@@ -127,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a4886c",
+   "id": "b311588e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,16 +171,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0258770",
+   "id": "6dd86e33",
    "metadata": {},
    "source": [
-    "Next, we will upload our compressed files to our S3 bucket. Storage is farily cheap on AWS (around $0.023 per GB per month), but be mindful of uploading too much data. It may be convenient to store a preprocessed version of the data, just don't store too many versions that aren't being actively used."
+    "Next, we will upload our compressed files to our S3 bucket. Storage is farily cheap on AWS (around $0.023 per GB per month), but be mindful of uploading too much data. It may be convenient to store a preprocessed version of the data at times, but try not to store too many versions that aren't being actively used."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67e618fb",
+   "id": "cbcf194b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,12 +201,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d04441c6",
+   "id": "eedebe4d",
    "metadata": {},
    "source": [
-    "Files successfully uploaded to S3.\n",
-    "\n",
-    "\n",
     "## Testing on notebook instance\n",
     "You should always test code thoroughly before scaling up and using more resources. Here, we will test our script using a small number of epochs — just to verify our setup is correct."
    ]
@@ -209,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67c27063",
+   "id": "43e1f91b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,19 +228,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e141bdbe",
+   "id": "459a1c3c",
    "metadata": {},
    "source": [
     "## Deploying PyTorch neural network via SageMaker\n",
     "Now that we have tested things locally, we can try to train with a larger number of epochs and a better instance selected. We can do this easily by invoking the PyTorch estimator. Our notebook is currently configured to use ml.m5.large. We can upgrade this to `ml.m5.xlarge` with the below code (using our notebook as a controller). \n",
     "\n",
-    "**Should we use a GPU?**: Since this dataset is farily small, we don't necessarily need a GPU for training. Considering costs, the m5.xlarge is `$0.17/hour`, while the cheapest GPU instance is `$0.75/hour`. However, for larger datasets (> 1 GB) and models, we may want to consider a GPU if training time becomes cumbersome (see [Instances for ML](https://docs.google.com/spreadsheets/d/1uPT4ZAYl_onIl7zIjv5oEAdwy4Hdn6eiA9wVfOBbHmY/edit?usp=sharing). If that doesn't work, we can try distributed computing (setting instance > 1). More on this in the next section."
+    "**Should we use a GPU?**: Since this dataset is farily small, we don't necessarily need a GPU for training. Considering costs, the m5.xlarge is `$0.17/hour`, while the cheapest GPU instance is `$0.75/hour`. However, for larger datasets (> 1 GB) and models, we may want to consider a GPU if training time becomes cumbersome (see [Instances for ML](https://carpentries-incubator.github.io/ML_with_AWS_SageMaker/instances-for-ML.html). If that doesn't work, we can try distributed computing (setting instance > 1). More on this in the next section."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e046b421",
+   "id": "5061ba6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,16 +283,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c58586",
+   "id": "bb19da42",
    "metadata": {},
    "source": [
-    "2024-11-03 21:27:03 Uploading - Uploading generated training model\n",
-    "    2024-11-03 21:27:03 Completed - Training job completed\n",
-    "    Training seconds: 135\n",
-    "    Billable seconds: 135\n",
-    "    Runtime for training on SageMaker: 197.62 seconds, instance_type: ml.m5.large, instance_count: 1\n",
-    "\n",
-    "\n",
     "## Deploying PyTorch neural network via SageMaker with a GPU instance\n",
     "\n",
     "In this section, we'll implement the same procedure as above, but using a GPU-enabled instance for potentially faster training. While GPU instances are more expensive, they can be cost-effective for larger datasets or more complex models that require significant computational power.\n",
@@ -311,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3302dc9c",
+   "id": "c2dc9553",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b880f6d",
+   "id": "109b646d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,16 +362,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "462b641d",
+   "id": "bd18fa70",
    "metadata": {},
    "source": [
-    "2024-11-03 21:33:56 Uploading - Uploading generated training model\n",
-    "    2024-11-03 21:33:56 Completed - Training job completed\n",
-    "    Training seconds: 350\n",
-    "    Billable seconds: 350\n",
-    "    Runtime for training on SageMaker: 409.68 seconds, instance_type: ml.g4dn.xlarge, instance_count: 1\n",
-    "\n",
-    "\n",
     "::::::::::::::::::::::::::: callout\n",
     "#### GPUs can be slow for small datasets/models\n",
     "This performance discrepancy might be due to the following factors:\n",
@@ -399,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c40d355a",
+   "id": "62d250ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,34 +431,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5097173",
+   "id": "a6f2165e",
    "metadata": {},
    "source": [
-    "2024-11-03 21:36:35 Uploading - Uploading generated training model\n",
-    "    2024-11-03 21:36:47 Completed - Training job completed\n",
-    "    Training seconds: 228\n",
-    "    Billable seconds: 228\n",
-    "    Runtime for training on SageMaker: 198.36 seconds, instance_type: ml.m5.xlarge, instance_count: 2\n",
-    "\n",
-    "\n",
     "### Distributed training for neural nets: how epochs are managed\n",
     "Amazon SageMaker provides two main strategies for distributed training: **data parallelism** and **model parallelism**. Understanding which strategy will be used depends on the model size and the configuration of your SageMaker training job, as well as the default settings of the specific SageMaker Estimator you are using.\n",
     "\n",
     "#### 1. **Data parallelism (most common for mini-batch SGD)**\n",
-    "   - **How it works**: In data parallelism, each instance in the cluster (e.g., multiple `ml.m5.xlarge` instances) maintains a **complete copy of the model**. The **training dataset is split across instances**, and each instance processes a different subset of data simultaneously. This enables multiple instances to complete forward and backward passes on different data batches independently.\n",
-    "   - **Epoch distribution**: Even though each instance processes all the specified epochs, they only work on a portion of the dataset for each epoch. After each batch, instances synchronize their gradient updates across all instances using a method such as *all-reduce*. This ensures that while each instance is working with a unique data batch, the model weights remain consistent across instances.\n",
-    "   - **Key insight**: Because all instances process the specified number of epochs and synchronize weight updates between batches, each instance's training contributes to a cohesive, shared model. The **effective epoch count across instances appears to be shared** because data parallelism allows each instance to handle a fraction of the data per epoch, not the epochs themselves. Data parallelism is well-suited for models that can fit into a single instance's memory and benefit from increased data throughput.\n",
+    "- **How it works**: In data parallelism, each instance in the cluster (e.g., multiple `ml.m5.xlarge` instances) maintains a **complete copy of the model**. The **training dataset is split across instances**, and each instance processes a different subset of data simultaneously. This enables multiple instances to complete forward and backward passes on different data batches independently.\n",
+    "- **Epoch distribution**: Even though each instance processes all the specified epochs, they only work on a portion of the dataset for each epoch. After each batch, instances synchronize their gradient updates across all instances using a method such as *all-reduce*. This ensures that while each instance is working with a unique data batch, the model weights remain consistent across instances.\n",
+    "- **Key insight**: Because all instances process the specified number of epochs and synchronize weight updates between batches, each instance's training contributes to a cohesive, shared model. The **effective epoch count across instances appears to be shared** because data parallelism allows each instance to handle a fraction of the data per epoch, not the epochs themselves. Data parallelism is well-suited for models that can fit into a single instance's memory and benefit from increased data throughput.\n",
     "\n",
     "#### 2. **Model parallelism (best for large models)**\n",
-    "   - **How it works**: Model parallelism divides the model itself across multiple instances, not the data. This approach is best suited for very large models that cannot fit into a single GPU or instance's memory (e.g., large language models).\n",
-    "   - **Epoch distribution**: The model is partitioned so that each instance is responsible for specific layers or components. Data flows sequentially through these partitions, where each instance processes a part of each batch and passes it to the next instance.\n",
-    "   - **Key insight**: This approach is more complex due to the dependency between model components, so **synchronization occurs across the model layers rather than across data batches**. Model parallelism generally suits scenarios with exceptionally large model architectures that exceed memory limits of typical instances.\n",
+    "- **How it works**: Model parallelism divides the model itself across multiple instances, not the data. This approach is best suited for very large models that cannot fit into a single GPU or instance's memory (e.g., large language models).\n",
+    "- **Epoch distribution**: The model is partitioned so that each instance is responsible for specific layers or components. Data flows sequentially through these partitions, where each instance processes a part of each batch and passes it to the next instance.\n",
+    "- **Key insight**: This approach is more complex due to the dependency between model components, so **synchronization occurs across the model layers rather than across data batches**. Model parallelism generally suits scenarios with exceptionally large model architectures that exceed memory limits of typical instances.\n",
     "\n",
     "### Determining which distributed training strategy is used\n",
     "SageMaker will select the distributed strategy based on:\n",
-    "   - **Framework and Estimator configuration**: Most deep learning frameworks in SageMaker default to data parallelism, especially when using PyTorch or TensorFlow with standard configurations.\n",
-    "   - **Model and data size**: If you specify a model that exceeds a single instance's memory capacity, SageMaker may switch to model parallelism if configured for it.\n",
-    "   - **Instance count**: When you specify `instance_count > 1` in your Estimator with a deep learning model, SageMaker will use data parallelism by default unless explicitly configured for model parallelism.\n",
+    "\n",
+    "- **Framework and Estimator configuration**: Most deep learning frameworks in SageMaker default to data parallelism, especially when using PyTorch or TensorFlow with standard configurations.\n",
+    "- **Model and data size**: If you specify a model that exceeds a single instance's memory capacity, SageMaker may switch to model parallelism if configured for it.\n",
+    "- **Instance count**: When you specify `instance_count > 1` in your Estimator with a deep learning model, SageMaker will use data parallelism by default unless explicitly configured for model parallelism.\n",
     "\n",
     "You observed that each instance ran all epochs with `instance_count=2` and 10,000 epochs, which aligns with data parallelism. Here, each instance processed the full set of epochs independently, but each batch of data was different, and the gradient updates were synchronized across instances.\n",
     "\n",
